--- a/src/components/ImagesList.css
+++ b/src/components/ImagesList.css
@@ -1,15 +1,11 @@
 .image-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-gap: 15px;
+  grid-gap: 1px 15px;
+  grid-auto-rows: 10px;
 }
 
 .image-list img {
   width: 250px;
-}
-
-.image-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  grid-row-end: span 2;
 }
